# lucks

./: .gitignore  CMakeLists.txt  README.md  ideas.txt  mục tiêu tối nay.txt
src/app/: main.cpp
src/core/: model.hpp  simulation.cpp  simulation.hpp
src/map/: stack_generator.cpp  stack_generator.hpp
src/persistence/: result_writer.cpp  result_writer.hpp
src/ui/: visualizer.cpp  visualizer.hpp
tests/: core_tests.cpp
